Update: change to cloud Database

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=JokesMVC;user=root;password=;"
+    "DefaultConnection": "Server=34.56.151.139,1433;Database=App_MVC;User Id=admin;Password=123456789aA$;"
   }
 }
